{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 263,
  "lineage": "c2800366-223d-0b69-f25f-f3a8317ec0b2",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:092988563851:security-group/sg-05461984d48b24016",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-05461984d48b24016",
            "ingress": [],
            "name": "wiliot-devops-eks-cluster-2025040521410964140000000b",
            "name_prefix": "wiliot-devops-eks-cluster-",
            "owner_id": "092988563851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "wiliot-devops",
              "Name": "wiliot-devops-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "wiliot-devops",
              "Name": "wiliot-devops-eks-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e90b6f1691043752"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wiliot_stack.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:092988563851:security-group/sg-0df93d694afb5064a",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0df93d694afb5064a",
            "ingress": [],
            "name": "wiliot-devops-eks-node-2025040521410964350000000d",
            "name_prefix": "wiliot-devops-eks-node-",
            "owner_id": "092988563851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "wiliot-devops",
              "Name": "wiliot-devops-eks-node",
              "Terraform": "true",
              "kubernetes.io/cluster/wiliot-devops-eks": "owned"
            },
            "tags_all": {
              "Environment": "wiliot-devops",
              "Name": "wiliot-devops-eks-node",
              "Terraform": "true",
              "kubernetes.io/cluster/wiliot-devops-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e90b6f1691043752"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wiliot_stack.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-141430240",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05461984d48b24016",
            "security_group_rule_id": "sgr-0cc8cec5f98b02de0",
            "self": false,
            "source_security_group_id": "sg-0df93d694afb5064a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.wiliot_stack.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2599207456",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0df93d694afb5064a",
            "security_group_rule_id": "sgr-0d9c86512b3b0cc33",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.wiliot_stack.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4160761527",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0df93d694afb5064a",
            "security_group_rule_id": "sgr-0c7a273d0f51e5fcf",
            "self": false,
            "source_security_group_id": "sg-05461984d48b24016",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.wiliot_stack.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-921031762",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0df93d694afb5064a",
            "security_group_rule_id": "sgr-089b88b7ba921a97f",
            "self": false,
            "source_security_group_id": "sg-05461984d48b24016",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.wiliot_stack.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-4289180612",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0df93d694afb5064a",
            "security_group_rule_id": "sgr-03a9c197ad1621405",
            "self": false,
            "source_security_group_id": "sg-05461984d48b24016",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.wiliot_stack.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3975909349",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0df93d694afb5064a",
            "security_group_rule_id": "sgr-02c4bf4b75a74d6c7",
            "self": false,
            "source_security_group_id": "sg-05461984d48b24016",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.wiliot_stack.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2287647790",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0df93d694afb5064a",
            "security_group_rule_id": "sgr-0cc9d09190f92c1c6",
            "self": false,
            "source_security_group_id": "sg-05461984d48b24016",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.wiliot_stack.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4091728274",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0df93d694afb5064a",
            "security_group_rule_id": "sgr-0dfc18bcbc55092f0",
            "self": false,
            "source_security_group_id": "sg-05461984d48b24016",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.wiliot_stack.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1440326746",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0df93d694afb5064a",
            "security_group_rule_id": "sgr-0fba2b4b1c65cb844",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.wiliot_stack.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3836724344",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0df93d694afb5064a",
            "security_group_rule_id": "sgr-0563a5971aed53b75",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.wiliot_stack.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1089496983",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0df93d694afb5064a",
            "security_group_rule_id": "sgr-0ea99e0495f3ddab2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.wiliot_stack.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wiliot_stack",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7846c0ebe2bd5ad",
            "arn": "arn:aws:ec2:eu-west-1:092988563851:elastic-ip/eipalloc-0c7846c0ebe2bd5ad",
            "domain": "vpc",
            "id": "eipalloc-0c7846c0ebe2bd5ad",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-255-177-158.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.255.177.158",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.wiliot_stack",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:092988563851:internet-gateway/igw-03d25bd31aa53f65c",
            "id": "igw-03d25bd31aa53f65c",
            "owner_id": "092988563851",
            "tags": {
              "Name": "wiliot-devops-igw"
            },
            "tags_all": {
              "Name": "wiliot-devops-igw"
            },
            "vpc_id": "vpc-0e90b6f1691043752"
          },
          "dependencies": [
            "module.wiliot_stack.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wiliot_stack",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7846c0ebe2bd5ad",
            "association_id": "eipassoc-0fb2197f9e6a2e89b",
            "connectivity_type": "public",
            "id": "nat-06e4b1fd801611b94",
            "network_interface_id": "eni-0c102983313b0e628",
            "private_ip": "10.0.0.141",
            "public_ip": "34.255.177.158",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0909eec0e23f945c6",
            "tags": {
              "Name": "wiliot-devops-nat"
            },
            "tags_all": {
              "Name": "wiliot-devops-nat"
            }
          },
          "dependencies": [
            "module.wiliot_stack.aws_eip.nat",
            "module.wiliot_stack.aws_internet_gateway.igw",
            "module.wiliot_stack.aws_subnet.public_az1",
            "module.wiliot_stack.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wiliot_stack",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:092988563851:route-table/rtb-0921caca2e984ffce",
            "id": "rtb-0921caca2e984ffce",
            "owner_id": "092988563851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e4b1fd801611b94",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wiliot-devops-private-rt"
            },
            "tags_all": {
              "Name": "wiliot-devops-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e90b6f1691043752"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wiliot_stack.aws_eip.nat",
            "module.wiliot_stack.aws_internet_gateway.igw",
            "module.wiliot_stack.aws_nat_gateway.nat",
            "module.wiliot_stack.aws_subnet.public_az1",
            "module.wiliot_stack.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wiliot_stack",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:092988563851:route-table/rtb-009723c797d2ba793",
            "id": "rtb-009723c797d2ba793",
            "owner_id": "092988563851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d25bd31aa53f65c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wiliot-devops-public-rt"
            },
            "tags_all": {
              "Name": "wiliot-devops-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e90b6f1691043752"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wiliot_stack.aws_internet_gateway.igw",
            "module.wiliot_stack.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wiliot_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089e86a8a49084e4a",
            "route_table_id": "rtb-0921caca2e984ffce",
            "subnet_id": "subnet-0a4707d0db85a138a"
          },
          "dependencies": [
            "module.wiliot_stack.aws_eip.nat",
            "module.wiliot_stack.aws_internet_gateway.igw",
            "module.wiliot_stack.aws_nat_gateway.nat",
            "module.wiliot_stack.aws_route_table.private",
            "module.wiliot_stack.aws_subnet.private",
            "module.wiliot_stack.aws_subnet.public_az1",
            "module.wiliot_stack.aws_vpc.this",
            "module.wiliot_stack.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08146cbeeb34d3e66",
            "route_table_id": "rtb-0921caca2e984ffce",
            "subnet_id": "subnet-09b2048e6c0640e25"
          },
          "dependencies": [
            "module.wiliot_stack.aws_eip.nat",
            "module.wiliot_stack.aws_internet_gateway.igw",
            "module.wiliot_stack.aws_nat_gateway.nat",
            "module.wiliot_stack.aws_route_table.private",
            "module.wiliot_stack.aws_subnet.private",
            "module.wiliot_stack.aws_subnet.public_az1",
            "module.wiliot_stack.aws_vpc.this",
            "module.wiliot_stack.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.wiliot_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f973f487ea5446a",
            "route_table_id": "rtb-009723c797d2ba793",
            "subnet_id": "subnet-0909eec0e23f945c6"
          },
          "dependencies": [
            "module.wiliot_stack.aws_internet_gateway.igw",
            "module.wiliot_stack.aws_route_table.public",
            "module.wiliot_stack.aws_subnet.public_az1",
            "module.wiliot_stack.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wiliot_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9c651e95d52f68a",
            "route_table_id": "rtb-009723c797d2ba793",
            "subnet_id": "subnet-033efc838631e8b9b"
          },
          "dependencies": [
            "module.wiliot_stack.aws_internet_gateway.igw",
            "module.wiliot_stack.aws_route_table.public",
            "module.wiliot_stack.aws_subnet.public_az2",
            "module.wiliot_stack.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wiliot_stack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:092988563851:security-group/sg-0b3a2e04c6e97e9c4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3a2e04c6e97e9c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-2025040521410964250000000c",
            "name_prefix": "terraform-",
            "owner_id": "092988563851",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e90b6f1691043752"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wiliot_stack.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wiliot_stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:092988563851:subnet/subnet-0a4707d0db85a138a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4707d0db85a138a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092988563851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wiliot-devops-private-0",
              "kubernetes.io/cluster/wiliot-devops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "wiliot-devops-private-0",
              "kubernetes.io/cluster/wiliot-devops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e90b6f1691043752"
          },
          "dependencies": [
            "module.wiliot_stack.aws_vpc.this",
            "module.wiliot_stack.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:092988563851:subnet/subnet-09b2048e6c0640e25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b2048e6c0640e25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092988563851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wiliot-devops-private-1",
              "kubernetes.io/cluster/wiliot-devops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "wiliot-devops-private-1",
              "kubernetes.io/cluster/wiliot-devops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e90b6f1691043752"
          },
          "dependencies": [
            "module.wiliot_stack.aws_vpc.this",
            "module.wiliot_stack.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wiliot_stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:092988563851:subnet/subnet-0909eec0e23f945c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0909eec0e23f945c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "092988563851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wiliot-devops-public-az1",
              "kubernetes.io/cluster/wiliot-devops-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "wiliot-devops-public-az1",
              "kubernetes.io/cluster/wiliot-devops-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e90b6f1691043752"
          },
          "dependencies": [
            "module.wiliot_stack.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wiliot_stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:092988563851:subnet/subnet-033efc838631e8b9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033efc838631e8b9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "092988563851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wiliot-devops-public-az2",
              "kubernetes.io/cluster/wiliot-devops-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "wiliot-devops-public-az2",
              "kubernetes.io/cluster/wiliot-devops-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e90b6f1691043752"
          },
          "dependencies": [
            "module.wiliot_stack.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wiliot_stack",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:092988563851:vpc/vpc-0e90b6f1691043752",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e434609d3681f023",
            "default_route_table_id": "rtb-00f6e6468282f822c",
            "default_security_group_id": "sg-086b91e639ccb31d4",
            "dhcp_options_id": "dopt-0a02f3ba6b299312d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e90b6f1691043752",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00f6e6468282f822c",
            "owner_id": "092988563851",
            "tags": {
              "Name": "wiliot-devops-vpc"
            },
            "tags_all": {
              "Name": "wiliot-devops-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}